# libamathus

./: LICENSE  README  README.md  bootstrap  cleanall  configure.ac
src/: Makefile.am  amathus-ws.cpp  amathus-ws.h  core.cpp  core.h  dllist.h  dllisth.h  eventfd_queue.cpp  eventfd_queue.h  log.cpp  log.h  main.cpp  sync_queue.cpp  sync_queue.h  timer.cpp  timer.h
